feat: cancel ticket
